[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-agent"
version = "0.1.0"
description = "Enterprise Knowledge & Operations Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
    "networkx>=3.1",
    "ollama>=0.6.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]